@@ -32,6 +32,11 @@
 #include <pal/spi/cf/MediaAccessibilitySPI.h>
 #include <wtf/SoftLinking.h>
 
+#if COMPILER(MSVC)
+#pragma warning(push)
+#pragma warning(disable:4273)
+#endif
+
 SOFT_LINK_FRAMEWORK_FOR_HEADER(WebCore, MediaAccessibility)
 
 SOFT_LINK_FUNCTION_FOR_HEADER(WebCore, MediaAccessibility, MACaptionAppearanceGetDisplayType, MACaptionAppearanceDisplayType, (MACaptionAppearanceDomain domain), (domain))
@@ -74,6 +79,10 @@ SOFT_LINK_CONSTANT_MAY_FAIL_FOR_HEADER(WebCore, MediaAccessibility, kMAAudibleMe
 #define kMAAudibleMediaSettingsChangedNotification get_MediaAccessibility_kMAAudibleMediaSettingsChangedNotification()
 SOFT_LINK_FUNCTION_MAY_FAIL_FOR_HEADER(WebCore, MediaAccessibility, MAImageCaptioningCopyCaptionWithSource, CFStringRef, (CGImageSourceRef imageSource, CFErrorRef * CF_RETURNS_RETAINED error), (imageSource, error))
 #define MAImageCaptioningCopyCaptionWithSource softLink_MediaAccessibility_MAImageCaptioningCopyCaptionWithSource
+
+#if COMPILER(MSVC)
+#pragma warning(pop)
+#endif
 
 #endif // HAVE(MEDIA_ACCESSIBILITY_FRAMEWORK)
 
