@@ -1,3 +1,15 @@
+2021-06-14  Per Arne  <pvollan@apple.com>
+
+        [AppleWin] Fix build failure
+        https://bugs.webkit.org/show_bug.cgi?id=226966
+        <rdar://79228536>
+
+        Reviewed by Eric Carlson.
+
+        Disable warning causing the build failure.
+
+        * platform/cf/MediaAccessibilitySoftLink.h:
+
 2021-06-14  Chris Dumez  <cdumez@apple.com>
 
         Avoid converting SecurityOrigins to Strings in SecurityPolicy
